# space-settlement

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  01.space-gravitation-orbit.md  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs-publish.yaml
changelog/: index.html
docs/: changelog.md  index.md
docs/assets/references/: mars.bib
docs/mars/: index.md  mars-and-the-earth.md  mars-faq.md  mars-geo.md  mars-natural-resources.md  martian-weather-climate.md
mars/: index.html
mars/mars-and-the-earth/: index.html
mars/mars-faq/: index.html
mars/mars-geo/: index.html
mars/mars-natural-resources/: index.html
mars/martian-weather-climate/: index.html
search/: search_index.json
