[tool.poetry]
name = "space-settlement"
version = "0.0.1"
description = "FAQ"
authors = ["LM <hi@leima.is>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.10"
mkdocs-autorefs = "0.4.1"
mkdocs-material = "9.0.5"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-bibtex = "^2.8.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"